fix item margin on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -402,6 +402,9 @@ p {
   .form {
     margin-bottom: 120px;
   }
+  .item-page {
+    margin-top: 200px;
+  }
   .item-page-image{
     width: auto;
   }
